--- a/src/css/BalanceNavLine.module.css
+++ b/src/css/BalanceNavLine.module.css
@@ -1,5 +1,62 @@
-/* ------------------------ Balance ----------- */
+.box {
+  border: 1px solid red;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  margin-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1280px) {
+  .box {
+    margin: 0 auto;
+    width: 1034px;
+  }
+}
+.toFlip {
+  display: flex;
+  flex-direction: column-reverse;
+  margin-top: 16px;
+}
+@media (min-width: 768px) {
+  .toFlip {
+    flex-direction: row;
+    margin-top: 0;
+  }
+}
 
+/* ------------------------ Balance ----------- */
+.balanceContainer {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+@media (min-width: 768px) {
+  .balanceContainer {
+    flex-direction: row;
+    gap: 16px;
+    margin: 40px 0 60px 0;
+    padding-left: 20px;
+    margin-right: 102px;
+  }
+}
+@media (min-width: 1280px) {
+  .balanceContainer {
+    margin-right: 214px;
+  }
+}
 .balanceP1 {
   width: 48px;
   text-align: center;
@@ -10,29 +67,66 @@
 }
 .balanceForm {
   display: flex;
-  gap: 16px;
-  position: relative;
+}
+@media (min-width: 768px) {
+  .balanceForm {
+    gap: 16px;
+  }
 }
 .balanceInput {
+  width: 140px;
+  border-top-left-radius: 22px;
+  border-bottom-left-radius: 22px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  text-align: right;
+  font-weight: 700;
+  font-size: 12px;
+  padding-right: 20px;
+  border-right: none;
   padding-left: 15px;
   width: 115px;
   height: 44px;
   background-color: #f2f5fc;
-  border-radius: 16px;
   border: 2px solid #ffffff;
 }
+@media (min-width: 768px) {
+  .balanceInput {
+    border-radius: 16px;
+  }
+}
 .balanceBtn {
+  display: block;
+  text-align: left;
+  font-size: 12px;
+  padding-left: 20px;
+  text-transform: uppercase;
   width: 115px;
   height: 44px;
   background-color: #f2f5fc;
-  border-radius: 16px;
   border: 2px solid #ffffff;
   color: var(--text-light-grey);
+  border-top-right-radius: 22px;
+  border-bottom-right-radius: 22px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   cursor: pointer;
   transition: transform 0.3s ease, filter 0.3s ease;
 }
+@media (min-width: 768px) {
+  .balanceBtn {
+    border-radius: 16px;
+    margin-left: 20px;
+    display: none;
+  }
+}
+@media (min-width: 1280px) {
+  .balanceBtn {
+    display: block;
+  }
+}
 .balanceBtn:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
   background-color: #ff751d;
   color: white;
 }
@@ -47,179 +141,77 @@
   z-index: 1000;
 }
 
-@media (max-width: 767px) {
-  .balanceContainer {
-    width: 184px;
-    height: 72px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 8px;
-    margin: 112px auto;
-  }
-
-  .balanceInput {
-    width: 140px;
-    border-top-left-radius: 22px;
-    border-bottom-left-radius: 22px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    text-align: right;
-    font-weight: 700;
-    font-size: 12px;
-    padding-right: 20px;
-    border-right: none;
-  }
-
-  .balanceBtn {
-    width: 140px;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 22px;
-    border-bottom-right-radius: 22px;
-    text-align: left;
-    text-transform: uppercase;
-    font-size: 12px;
-    padding-left: 20px;
-  }
-
-  .balanceBtn:hover {
-    transform: scale(1.05);
-  }
-
-  .balanceForm {
-    position: relative;
-    z-index: 1;
-    gap: 0;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1279px) {
-  .balanceContainer {
-    width: 704px;
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-    align-items: center;
-    margin: 0 auto;
-    margin: 40px auto 32px auto;
-  }
-}
-
-@media (min-width: 1280px) {
-  .balanceContainer {
-    width: 1034px;
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-    align-items: center;
-    margin: 0 auto;
-    margin: 40px auto 32px auto;
-  }
-}
-
 /* ------------------------ Report Data selection ----------- */
 
-@media (max-width: 767px) {
-  .goBackBtn {
-    color: var(--light-grey);
-  }
-  .box {
-    width: 100%;
-    position: absolute;
-    top: 20px;
-    left: 0;
-    transform-origin: center;
-    z-index: 1000;
-  }
-  .dataNav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 5px;
-    width: 180px;
-    margin: 10px auto 0 auto;
-  }
-  .back {
-    padding-left: 20px;
-  }
-  .goBackBtn {
-    font-size: 0;
-  }
-}
-@media (min-width: 768px) and (max-width: 1279px) {
-  .goBackBtn {
-    color: var(--text-light-grey);
-  }
-  .box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-    margin-top: -85px;
-    margin-bottom: 32px;
-    width: 704px;
-  }
-  .dataNav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    padding: 10px;
-    width: 210px;
-    padding-left: 20px;
-  }
-  .back {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-  }
-}
-@media (min-width: 1280px) {
-  .goBackBtn {
-    color: var(--text-light-grey);
-  }
-  .box {
-    border: 1px solid red;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-    margin-top: -85px;
-    margin-bottom: 32px;
-    width: 1034px;
-  }
-  .dataNav {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    padding: 10px;
-    width: 210px;
-  }
-  .back {
-    display: flex;
-    align-items: center;
-    gap: 14px;
-  }
-}
-
 .dataNav {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 5px;
+  width: 180px;
+  margin-bottom: 32px;
   color: var(--text-light-grey);
   position: relative;
 }
-
+@media (min-width: 768px) {
+  .dataNav {
+    justify-content: center;
+    padding: 10px;
+    width: 210px;
+    padding-left: 20px;
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1280px) {
+  .dataNav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
+    width: 210px;
+  }
+}
+.back {
+  border: 1px solid red;
+  padding-left: 20px;
+  margin-top: 0px;
+}
+@media (min-width: 768px) {
+  .back {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+  }
+}
+@media (min-width: 1280px) {
+  .back {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+  }
+}
 .goBackBtn {
+  color: var(--light-grey);
+  font-size: 0;
   background: none;
   border: none;
   cursor: pointer;
 }
-
-.back {
-  margin-top: 0px;
+@media (min-width: 768px) {
+  .goBackBtn {
+    display: block;
+    font-size: 12px;
+    color: var(--text-light-grey);
+  }
 }
-
+@media (min-width: 1280px) {
+  .goBackBtn {
+    color: var(--text-light-grey);
+  }
+}
 .dataBold {
   font-weight: bold;
   font-size: 14px;
@@ -228,7 +220,6 @@
   color: var(--black);
   padding: 5px;
 }
-
 .dataArrows {
   display: flex;
   justify-content: space-between;
@@ -244,15 +235,12 @@
   padding: 5px;
   transition: transform 0.3s ease, filter 0.3s ease;
 }
-
 .arrowBtn:hover {
   transform: scale(1.25);
 }
-
 .arrowBtn:active {
   filter: brightness(1.3);
 }
-
 .goBackBtn {
   background: none;
   border: none;
@@ -260,7 +248,6 @@
   color: var(--text-light-grey);
   transition: transform 0.3s ease, filter 0.3s ease;
 }
-
 .goBackBtn:hover {
   transform: scale(1.1);
   color: #ff751d;
@@ -268,7 +255,6 @@
 .goBackBtn:active {
   filter: brightness(1.3);
 }
-
 .errorMessage {
   color: red;
   text-align: center;
@@ -278,11 +264,6 @@
   transform: translateX(-50%);
   white-space: nowrap;
 }
-
 .arrowIcon {
   margin-right: 20px;
-}
-
-.border {
-  border: 1px solid red;
 }
